plugins {
	id 'java'
	id 'eclipse'
}

group 'me.remigio07.chatplugin'
version '1.9.6'
jar.enabled = false

subprojects {
	apply plugin: 'java'
	apply plugin: 'eclipse'
	
	repositories {
		maven { url 'https://hub.spigotmc.org/nexus/content/repositories/snapshots/' }
		maven { url 'https://repo.spongepowered.org/repository/maven-public/' }
		maven { url 'https://repo.papermc.io/repository/maven-public/' }
	}
	
	dependencies {
		compileOnly('org.spigotmc:spigot-api:1.21-R0.1-SNAPSHOT') {
			exclude group: 'org.yaml', module: 'snakeyaml'
		}
		compileOnly('org.spongepowered:spongeapi:7.4.0') {
			exclude group: 'org.yaml', module: 'snakeyaml'
		}
		compileOnly('io.github.waterfallmc:waterfall-api:1.21-R0.1-SNAPSHOT') {
			exclude group: 'org.yaml', module: 'snakeyaml'
		}
		compileOnly('com.velocitypowered:velocity-api:3.1.1') {
			exclude group: 'org.yaml', module: 'snakeyaml'
		}
		compileOnly 'com.mojang:authlib:1.5.25'
		compileOnly 'org.yaml:snakeyaml:1.33'
	}
	
	java {
		sourceCompatibility = 1.8
		targetCompatibility = 1.8
	}
	
	compileJava {
		options.compilerArgs.add '-Xlint:-options,deprecation,-missing-explicit-ctor'
		options.encoding = 'UTF-8'
	}
	
	compileTestJava.options.encoding = 'UTF-8'
}
